Update 2.06 Determine data security controls and compliance requirements.md

--- a/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
+++ b/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
@@ -51,7 +51,7 @@ Data at rest refers to data stored on a device or system and not actively being 
 Full-disk encryption: Encrypts an entire storage drive. 
 
 File-level encryption: Encrypts individual files. 
-  
+
 Field-level encryption: Encrypts specific data fields within a file.
 </details>
 
@@ -109,8 +109,9 @@ Homomorphic encryption allows computations to be performed on encrypted data wit
 
 As a security expert, you play a crucial role in ensuring that security controls are not just implemented, but implemented effectively. This involves adapting general security recommendations from frameworks and guidelines to your organization's specific context. Two key processes in this adaptation are scoping and tailoring.
 
-Scoping involves determining which security controls are applicable to the systems and assets you need to protect. It's about eliminating controls that are redundant or unnecessary for your environment. For instance, if your system doesn't allow concurrent logins, there's no need for a control addressing concurrent session management. Scoping demands careful consideration and documented justification for omitting any controls from the baseline.
-Tailoring, on the other hand, focuses on modifying the implementation of controls to align with the organization's specific requirements. This might involve adjusting the control's parameters or substituting it with a compensating control that achieves a similar security outcome. Imagine an organization with a central office and a remote site. The baseline control set might work perfectly for the central office but prove impractical for the remote location. Tailoring allows for adjustments, such as implementing compensating controls, to address the unique circumstances of the remote site.
+**Scoping** involves determining which security controls are applicable to the systems and assets you need to protect. It's about eliminating controls that are redundant or unnecessary for your environment. For instance, if your system doesn't allow concurrent logins, there's no need for a control addressing concurrent session management. Scoping demands careful consideration and documented justification for omitting any controls from the baseline.
+
+**Tailoring**, on the other hand, focuses on modifying the implementation of controls to align with the organization's specific requirements. This might involve adjusting the control's parameters or substituting it with a compensating control that achieves a similar security outcome. Imagine an organization with a central office and a remote site. The baseline control set might work perfectly for the central office but prove impractical for the remote location. Tailoring allows for adjustments, such as implementing compensating controls, to address the unique circumstances of the remote site.
 
 ```mermaid
 flowchart TB
@@ -120,12 +121,11 @@ flowchart TB
   B --> B3[Document justification for omitted controls]
 
   A --> C[Tailoring]
-  C --> C1[Apply scoping outcomes]
   C --> C2[Adjust control parameters to fit environment]
   C --> C3[Add compensating controls if needed]
   C --> C4[Document tailored control specifications]
 
-  B1 & B2 & B3 --> C1
+  B1 & B2 & B3 --> C1[Apply scoping outcomes]
   C4 --> D[Tailored & Justified Control Set]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
@@ -135,11 +135,11 @@ flowchart TB
 Scoping and tailoring work hand in hand, first identifying relevant controls and then fine-tuning their implementation.
 
 Key Considerations for Scoping and Tailoring:
-1. Organizational Mission and Objectives: Security controls should support the organization's core functions and strategic goals.
-2. Risk Assessment: The selection and modification of controls should be driven by a thorough understanding of the organization's risk profile, including threats, vulnerabilities, and impact assessments.
-3. Resource Constraints: Consider the organization's budget, staffing, and technical capabilities when making decisions about scoping and tailoring.
-4. Operational Impact: Evaluate how the chosen controls will affect the organization's day-to-day operations and ensure they do not create undue burdens.
-5. Documentation: Meticulously document all scoping and tailoring decisions, including the rationale behind them. This documentation is essential for demonstrating compliance, facilitating audits, and ensuring continuity.
+1. **Organizational Mission and Objectives:** Security controls should support the organization's core functions and strategic goals.
+2. **Risk Assessment:** The selection and modification of controls should be driven by a thorough understanding of the organization's risk profile, including threats, vulnerabilities, and impact assessments.
+3. **Resource Constraints:** Consider the organization's budget, staffing, and technical capabilities when making decisions about scoping and tailoring.
+4. **Operational Impact:** Evaluate how the chosen controls will affect the organization's day-to-day operations and ensure they do not create undue burdens.
+5. **Documentation:** Meticulously document all scoping and tailoring decisions, including the rationale behind them. This documentation is essential for demonstrating compliance, facilitating audits, and ensuring continuity.
 
 :necktie: Convenience should never be the driving force behind removing or altering security controls. Any changes must be justified based on operational needs and their potential impact on risk. 
 
@@ -202,7 +202,11 @@ A company might need to scope a parent company's security standard if the subsid
 
 ## 2.6.3 Standards Selection ##
 
-When establishing a security control baseline for an organization, one approach is to adopt an existing framework. A security framework is a structured set of documented policies and procedures that outline how an enterprise should manage its security posture. These frameworks often prioritize overall processes and best practices rather than specific controls. They serve as a foundation for assessing and improving the organization's security management system. Organizations can choose a recognized framework or combine elements from various frameworks to create a baseline that suits their specific needs. There are many well-established security frameworks available, each with its own strengths and weaknesses. Choosing the right framework depends on factors like the sensitivity of the assets being protected, industry requirements, regulatory factors, and cost-benefit considerations.
+When establishing a security control baseline for an organization, one approach is to adopt an existing framework. 
+
+:brain: A security framework is a structured set of documented policies and procedures that outline how an enterprise should manage its security posture. 
+
+These frameworks often prioritize overall processes and best practices rather than specific controls. They serve as a foundation for assessing and improving the organization's security management system. Organizations can choose a recognized framework or combine elements from various frameworks to create a baseline that suits their specific needs. There are many well-established security frameworks available, each with its own strengths and weaknesses. Choosing the right framework depends on factors like the sensitivity of the assets being protected, industry requirements, regulatory factors, and cost-benefit considerations.
 
 :link: See also [1.3.4 Security control frameworks](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#134-security-control-frameworks-eg-international-organization-for-standardization-iso-national-institute-of-standards-and-technology-nist-control-objectives-for-information-and-related-technology-cobit-sherwood-applied-business-security-architecture-sabsa-payment-card-industry-pci-federal-risk-and-authorization-management-program-fedramp)
 
@@ -213,6 +217,7 @@ The **UK 10 Steps to Cyber Security**, published by the UK's National Cyber Secu
 
 
 In addition to security frameworks, there are numerous regional and industry-specific standards that provide more specific recommendations or even mandatory requirements for security controls. These standards, such as PCI DSS, HIPAA, and GDPR, often go beyond the broader guidelines provided by frameworks. A few prominent security standards include: **NIST SP 800-53 Rev 5**, Security and Privacy Controls for Federal Information Systems and Organizations, which catalogs security controls for all U.S. federal information systems, excluding those related to national security. Organizations use this standard to establish, tailor, and supplement their baseline security controls based on their risk assessments. NIST SP 800-53A Rev 4, Assessing Security and Privacy Controls in Federal Information Systems and Organizations: Building Effective Assessment Plans, serves as a complementary guide, offering procedures for assessing security and privacy controls employed within U.S. federal information systems and organizations. These assessment procedures, conducted at different stages of the system development lifecycle, align with the controls outlined in NIST SP 800-53, Revision 5. While primarily aimed at U.S. federal agencies, this standard is also applicable to private sector organizations.
+
 **FIPS Publication 199**, Standards for Security Categorization of Federal Information and Information Systems, provides a standardized approach for categorizing U.S. federal information and information systems based on an agency's level of concern for confidentiality, integrity, and availability. It also considers the potential impact on agency assets and operations if their information and information systems were to be compromised. Although primarily directed at U.S. government agencies, this directive can be valuable and applicable to private sector organizations as well. FIPS Publication 200, Minimum Security Requirements for Federal Information and Information Systems, an integral part of the NIST RMF, emphasizes enhanced security measures during the development, implementation, and operation of more secure information systems. This standard defines 17 families of security controls encompassing confidentiality, integrity, and availability of U.S. federal information systems, along with the information they process, store, and transmit. Despite being a U.S. government standard, it serves as a useful reference for any country or industry.
 
 
@@ -228,7 +233,9 @@ When selecting security controls within a baseline, organizations need to consid
 Even in cases where an organization is not legally obligated to comply with a specific standard, adopting a well-designed community standard can be beneficial. For example, U.S. government organizations are required to comply with numerous standards outlined in NIST SP 800 documents. These same documents are widely used by organizations in the private sector to guide the development and implementation of their own security standards. The selection of information asset protection standards should prioritize balancing the value of the information with the cost of protecting it. Asset inventories and classification standards play a crucial role in determining the appropriate security controls.
 
 
-The abundance of good security frameworks underscores the importance of understanding their advantages and disadvantages, as well as their potential for customization to address specific information security challenges. Each framework can be tailored to suit the unique variables present in an organization, including regulatory and compliance requirements, cost considerations, risk tolerance, and business mission. Security practitioners must possess the expertise to evaluate frameworks against organizational requirements and implement solutions that achieve the desired level of asset security.
+The abundance of good security frameworks underscores the importance of understanding their advantages and disadvantages, as well as their potential for customization to address specific information security challenges. Each framework can be tailored to suit the unique variables present in an organization, including regulatory and compliance requirements, cost considerations, risk tolerance, and business mission. 
+
+:necktie: Security practitioners must possess the expertise to evaluate frameworks against organizational requirements and implement solutions that achieve the desired level of asset security.
 
 
 ### Open Questions ###
