Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -6,17 +6,17 @@ Security should be considered at every stage: design, development, testing, impl
 
 🔗 [James Anderson’s Computer Security Technology Planning Study (1972)](https://seclab.cs.ucdavis.edu/projects/history/papers/ande72.pdf) introduced fundamental principles for security architecture: security functions must not be bypassed, they should be small enough to be easily tested for defects, and they must always be invoked when needed.
 
-*ISO/IEC 19249* provides a standardized approach to secure system design.ISO/IEC 19249 outlines five architectural principles:
+*ISO/IEC 19249* provides a standardized approach to secure system design. ISO/IEC 19249 outlines five architectural principles:
 
-- Domain Separation – Grouping components with similar security attributes and ensuring that communication between domains is strictly controlled.
+- **Domain Separation** – Grouping components with similar security attributes and ensuring that communication between domains is strictly controlled.
 
-- Layering – Structuring a system into different levels, each enforcing its own security policies, preventing higher layers from bypassing security mechanisms in lower layers.
+- **Layering** – Structuring a system into different levels, each enforcing its own security policies, preventing higher layers from bypassing security mechanisms in lower layers.
 
-- Encapsulation – Restricting direct access to components and ensuring that all interactions occur through defined interfaces that enforce security policies.
+- **Encapsulation** – Restricting direct access to components and ensuring that all interactions occur through defined interfaces that enforce security policies.
 
-- Redundancy – Duplicating critical components to ensure system availability and integrity, such as RAID storage or high-availability clusters.
+- **Redundancy** – Duplicating critical components to ensure system availability and integrity, such as RAID storage or high-availability clusters.
 
-- Virtualization – Abstracting physical resources to enhance security, scalability, and efficiency, as seen in virtual machines and containerized environments.
+- **Virtualization** – Abstracting physical resources to enhance security, scalability, and efficiency, as seen in virtual machines and containerized environments.
 
 ```mermaid
 flowchart TD
@@ -51,15 +51,15 @@ flowchart TD
 
 In addition to architectural principles, ISO/IEC 19249 also defines five design principles:
 
-- Least Privilege – Granting only the minimum necessary access for the shortest time needed.
+- **Least Privilege** – Granting only the minimum necessary access for the shortest time needed.
 
-- Attack Surface Minimization – Reducing potential entry points for attackers by disabling unnecessary services and simplifying system functions.
+- **Attack Surface Minimization** – Reducing potential entry points for attackers by disabling unnecessary services and simplifying system functions.
 
-- Centralized Parameter Validation – Ensuring all inputs are properly checked to prevent vulnerabilities like SQL injection.
+- **Centralized Parameter Validation** – Ensuring all inputs are properly checked to prevent vulnerabilities like SQL injection.
 
-- Centralized General Security Services – Consolidating security functions like authentication, access control, and cryptographic operations to improve efficiency and consistency.
+- **Centralized General Security Services** – Consolidating security functions like authentication, access control, and cryptographic operations to improve efficiency and consistency.
 
-- Error and Exception Handling – Designing systems to detect, log, and handle errors securely without exposing sensitive information.
+- **Error and Exception Handling** – Designing systems to detect, log, and handle errors securely without exposing sensitive information.
 
 ```mermaid
 flowchart TD
@@ -107,17 +107,11 @@ Think of it like this:
 
 The relationship is always about who is trying to access what.
 
-Transitive trust is when trust between two systems automatically extends to a third system. Imagine this:
+**Transitive trust** is when trust between two systems automatically extends to a third system. Imagine this:
 
-You trust your best friend (A).
+You(A) trust your best friend (B). Your friend trusts their coworker (C). Because you trust your friend, you also automatically trust their coworker (C), even if you've never met them.
 
-Your friend trusts their coworker (B).
-
-Because you trust your friend, you also automatically trust their coworker (C), even if you've never met them.
-
-In cybersecurity, this can happen with network authentication or permissions:
-
-If System A trusts System B, and System B trusts System C, then System A might also trust System C—even if it wasn’t intended!
+In cybersecurity, this can happen with network authentication or permissions: If System A trusts System B, and System B trusts System C, then System A might also trust System C—even if it wasn’t intended!
 
 This can be risky because an attacker could compromise System C and use that trust chain to gain access to System A.
 
