Update 1.10 Understand and apply threat modeling concepts and methodologies.md

--- a/DOMAIN1: Security and Risk Management/1.10 Understand and apply threat modeling concepts and methodologies.md
+++ b/DOMAIN1: Security and Risk Management/1.10 Understand and apply threat modeling concepts and methodologies.md
@@ -68,6 +68,8 @@ A **trust boundary** is the line that separates areas of differing trust levels 
 
 :link: The OWASP threat modeling process describes a structured approach to application threat modeling that enables you to identify, quantify, and address the security risks associated with an application: https://owasp.org/www-community/Threat_Modeling_Process
 
+:link: Refer also to [3.1.1 Threat modeling](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN3%3A%20Security%20Architecture%20and%20Engineering/3.01%20Research%2C%20implement%2C%20and%20manage%20engineering%20processes%20using%20secure%20design%20principles.md#311-threat-modeling)
+
 ### Open Questions ###
 
 1. What is the primary goal of threat modeling, and when can it be conducted in the development lifecycle?
