Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -142,7 +142,7 @@ There are several ways to approach threat modeling, but three of the most common
 
 STRIDE is a great starting point for asking “What could go wrong?” when developing or reviewing a system.
 
-:link: [The STRIDE Model](https://learn.microsoft.com/en-us/azure/security/develop/threat-modeling-tool-threats)
+:link: [The STRIDE Model in the Microsoft learning center](https://learn.microsoft.com/en-us/azure/security/develop/threat-modeling-tool-threats)
 
 The **DREAD** model is used to evaluate the severity of different threats by assigning numerical ratings (typically between 1 and 10) based on five key factors:
 
@@ -160,19 +160,19 @@ By scoring each of these factors, you can prioritize which threats are the most 
 
 **PASTA (Process for Attack Simulation and Threat Analysis)** is a more detailed and comprehensive approach to threat modeling. Developed in 2012, it includes seven steps:
 
-**Define Objectives:** This is where you identify business goals, security requirements, and possible impacts.
+**1. Define Objectives:** This is where you identify business goals, security requirements, and possible impacts.
 
-**Define Technical Scope:** You outline the technical environment, including all systems, devices, applications, and data that need protection.
+**2. Define Technical Scope:** You outline the technical environment, including all systems, devices, applications, and data that need protection.
 
-**Application Decomposition:** You break down the system into components and map out data flows to understand how data moves and who accesses it.
+**3. Application Decomposition:** You break down the system into components and map out data flows to understand how data moves and who accesses it.
 
-**Threat Analysis:** This step involves gathering information about threats both from internal sources (like system logs) and external sources (like threat intelligence feeds).
+**4. Threat Analysis:** This step involves gathering information about threats both from internal sources (like system logs) and external sources (like threat intelligence feeds).
 
-**Vulnerability Analysis:** In this step, you identify vulnerabilities in the code, system configurations, and infrastructure that could be exploited by attackers.
+**5. Vulnerability Analysis:** In this step, you identify vulnerabilities in the code, system configurations, and infrastructure that could be exploited by attackers.
 
-**Attack Modeling:** Here, you simulate attacks to understand which vulnerabilities might be exploited and the potential impact of those attacks.
+**6. Attack Modeling:** Here, you simulate attacks to understand which vulnerabilities might be exploited and the potential impact of those attacks.
 
-**Risk and Impact Analysis:** Finally, you refine your business impact analysis based on the previous steps, prioritize risks, and develop a plan to mitigate them.
+**7. Risk and Impact Analysis:** Finally, you refine your business impact analysis based on the previous steps, prioritize risks, and develop a plan to mitigate them.
 
 
 
